--- a/xmeme-server/package.json
+++ b/xmeme-server/package.json
@@ -15,9 +15,8 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "mongoose": "^5.11.15",
+    "morgan": "^1.10.0",
     "swagger-ui-express": "^4.1.6"
   },
-  "devDependencies": {
-    "morgan": "^1.10.0"
-  }
+  "devDependencies": {}
 }
